syntax ="proto3";

package models;
import "google/protobuf/empty.proto";
option go_package = "/proto/product";

message EntityProtoProduct {
    string id = 1;
    string name = 2;
    int64 quantity = 3;
    int64 price = 4;
    bool is_active = 5;
}

message ResponseEntityProductList {
    repeated EntityProtoProduct list = 1;
}
message CreateProductRequest {
    string name = 1;
    int64 quantity = 2;
    int64 price = 3;
    bool is_active = 4;
}

message ProductByIdRequest {
    string id = 1;
}

service ServiceProductHandler {
    rpc GetProductByIdRPC(ProductByIdRequest) returns (EntityProtoProduct) {}
    rpc ListProductRPC(google.protobuf.Empty) returns (ResponseEntityProductList);
    rpc CreateProductRPC(CreateProductRequest) returns (EntityProtoProduct);
    rpc UpdateProductRPC(EntityProtoProduct) returns (EntityProtoProduct);
    rpc DeleteProductRPC(ProductByIdRequest) returns (google.protobuf.Empty);
}